--- a/_includes/menu_item.html
+++ b/_includes/menu_item.html
@@ -1,13 +1,5 @@
-<ul>
+<nav class="menu">
   {%-for item in include.collection-%}
-    <li>
-    {%- if item.url -%}
-      <a href="{{ item.url }}">{{ item.title }}</a>
-    {%- else -%}
-      {{ item.title }}
-    {%- endif -%}
-    </li>
-
     {%-if item.post_list-%}
       {%
         include post_list.html
@@ -17,10 +9,20 @@
           show_more_text=item.post_list.show_more_text
           show_more_url=item.post_list.show_more_url
      -%}
+    {%-else-%}
+      <ul>
+        <li>
+        {%- if item.url -%}
+          <a href="{{ item.url }}">{{ item.title }}</a>
+        {%- else -%}
+          {{ item.title }}
+        {%- endif -%}
+        </li>
+      </ul>
     {%-endif-%}
 
     {%-if item.entries-%}
       {%-include menu_item.html collection=item.entries-%}
     {%-endif-%}
   {%-endfor-%}
-</ul>
+</nav>
