--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -2,8 +2,12 @@
 layout: default
 ---
 
-{%-include back_link.html-%}
+<div class="back-link">
+  {%-include back_link.html-%}
+</div>
 
-<h1>{{ page.title }}</h1>
+<div class="archive-header">
+  <h1>{{ page.title }}</h1>
+</div>
 
 {%-include post_list.html category=page.which_category-%}
