--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,5 +17,8 @@
         <script type="text/javascript" src="{{ site.baseurl }}/assets/js/{{ js_file }}.js"></script>
       {% endfor %}
     {% endif %}
+    
+    <!-- Post filter script -->
+    <script type="text/javascript" src="{{ site.baseurl }}/assets/js/post-filter.js"></script>
   </body>
 </html>
