--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,13 +1,11 @@
 ---
 layout: default
 ---
-<header>
-  <h1>{{ site.title }}</h1>
+<header class="blog-header">
+  <h1 class="blog-title">{{ site.title }}</h1>
   {%-if site.theme_config.show_description-%}
-    <p>{{ site.description }}</p>
+    <p class="blog-description">{{ site.description }}</p>
   {%-endif-%}
 </header>
-
-{%-include menu_item.html collection=site.data.menu.entries-%}
 
 {{ content }}
