--- a/_includes/back_link.html
+++ b/_includes/back_link.html
@@ -1,1 +1,6 @@
-<a href="{{ "/" | relative_url }}">{{ site.theme_config.back_home_text }}</a>
+<a href="{{ "/" | relative_url }}" class="back-home-btn">
+  <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+    <path d="M6.5 3L2 8L6.5 13M2.5 8H14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+  </svg>
+  <span>{{ site.theme_config.back_home_text }}</span>
+</a>
