--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,15 +8,35 @@
     <meta name="description" content="{{ site.description }}">
   {% endif %}
 
-  {% if page.image %}
-    <meta property="og:image" content="{{ page.image | relative_url }}" />
-  {% else %}
-    <meta property="og:image" content="{{ site.favicon }}" />
-  {% endif %}
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="{% if page.layout == 'post' %}article{% else %}website{% endif %}" />
+  <meta property="og:url" content="{{ page.url | absolute_url }}" />
+  <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+  <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
   <meta property="og:site_name" content="{{ site.title }}" />
-  <meta property="og:title" content="{{ site.title }}" />
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="{{ site.url }}" />
+  {% if page.image %}
+    <meta property="og:image" content="{{ page.image | absolute_url }}" />
+    <meta property="og:image:alt" content="{{ page.title }}" />
+  {% elsif site.logo %}
+    <meta property="og:image" content="{{ site.logo | absolute_url }}" />
+  {% endif %}
+  {% if page.date %}
+    <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}" />
+  {% endif %}
+  {% if page.author %}
+    <meta property="article:author" content="{{ page.author }}" />
+  {% endif %}
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="{{ page.url | absolute_url }}" />
+  <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" />
+  <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
+  {% if page.image %}
+    <meta name="twitter:image" content="{{ page.image | absolute_url }}" />
+  {% elsif site.logo %}
+    <meta name="twitter:image" content="{{ site.logo | absolute_url }}" />
+  {% endif %}
 
   <title>
     {%- if page.title -%}
