--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
       </div>
     </main>
 
+    {%-include mermaid.html-%}
     {%-if site.goat_counter and jekyll.environment == "production"-%}
       {%-include goat_counter.html-%}
     {%-endif-%}
